Added Mongo Data access and Interfaces

--- a/BugTrackerUI/appsettings.json
+++ b/BugTrackerUI/appsettings.json
@@ -5,6 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "DatabaseName": "bugtracker",
+  "ConnectionStrings": {
+    "MongoDB": "mongodb+srv://frank:PZ6cCcohLbesGYGW@cluster0.weksh.mongodb.net/test"
+  }
 }
 
