Adding log in background and picture. Adding user authentication and admin authentication in multiple pages. User and admin can now edit their name and have it update in the database

--- a/BugTrackerUI/BugTrackerUI.csproj
+++ b/BugTrackerUI/BugTrackerUI.csproj
@@ -10,11 +10,13 @@
     <None Remove="Components\" />
     <None Remove="Microsoft.Identity.Web" />
     <None Remove="Microsoft.Identity.Web.UI" />
+    <None Remove="Helpers\" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Models\" />
     <Folder Include="wwwroot\images\" />
     <Folder Include="Components\" />
+    <Folder Include="Helpers\" />
   </ItemGroup>
   <ItemGroup>
     <Content Remove="wwwroot\images\" />
