--- a/BugTrackerUI/BugTrackerUI.csproj
+++ b/BugTrackerUI/BugTrackerUI.csproj
@@ -30,4 +30,9 @@
       <GlobalPropertiesToRemove></GlobalPropertiesToRemove>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <Content Update="Pages\Index.razor">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
 </Project>
